# nintendo-museum-ticket

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
src/: monitor.py
utils/: discord_utils.py  load_proxies.py  logging_setter.py
